cfn-templates/cfn-scalable-website.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'Creates a scalable evnironment for hosting a Website '
Parameters:
  VpcId:
    Type: 'AWS::EC2::VPC::Id'
    Description: VpcId of your existing Virtual Private Cloud (VPC)
    ConstraintDescription: must be the VPC Id of an existing Virtual Private Cloud.
  PrivateSubnet1:
    Type: String
    Description: A private Subnet in your VPC Virtual Private Cloud (VPC)
  PrivateSubnet2:
    Type: String
    Description: Another private Subnet in your VPC  Virtual Private Cloud (VPC)
  PublicSubnet1:
    Type: String
    Description: A publc subnet in your Virtual Private Cloud (VPC)
  PublicSubnet2:
    Type: String
    Description: Another publc subnet in your Virtual Private Cloud (VPC)
  KeyPairName:
    Description: Name of an existing EC2 key pair to launch instances with
    Type: "AWS::EC2::KeyPair::KeyName"
  InstanceType:
    Description: WebServer EC2 instance type
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.nano
      - t2.micro
      - t2.small
      - t2.medium
      - t2.large
    ConstraintDescription: must be a valid EC2 instance type.    
  WebsiteFilesS3Bucket:
    Type: String
    Description: Name of an existing S3 BuketName which contains Website files
  WebServerCapacity:
    Default: '1'
    Description: The initial nuber of WebServer instances
    Type: Number
    MinValue: '1'
    MaxValue: '5'
    ConstraintDescription: must be between 1 and 5 EC2 instances.
Mappings:
  AWSInstanceType2Arch:
    t2.nano:
      Arch: HVM64
    t2.micro:
      Arch: HVM64
    t2.small:
      Arch: HVM64
    t2.medium:
      Arch: HVM64
    t2.large:
      Arch: HVM64
  AWSInstanceType2NATArch:
    t2.nano:
      Arch: NATHVM64
    t2.micro:
      Arch: NATHVM64
    t2.small:
      Arch: NATHVM64
    t2.medium:
      Arch: NATHVM64
    t2.large:
      Arch: NATHVM64
  AWSRegionArch2AMI:
    eu-west-1: 
      HVM64: ami-1a962263
    eu-west-2: 
      HVM64: ami-e7d6c983
Resources:
  InstanceRootRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
        - Effect: Allow
          Principal:
            Service:
            - ec2.amazonaws.com
          Action:
          - sts:AssumeRole
      Path: "/"
  
  S3ReadOnlyPolicy:
    Type: AWS::IAM::Policy
    Properties:
      PolicyName: root
      PolicyDocument:
        Version: '2012-10-17'
        Statement:
        - Effect: Allow
          Action: 
            - "s3:Get*"
            - "s3:List*"
          Resource: "*"
      Roles:
      - !Ref InstanceRootRole
  
  WebInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: "/"
      Roles:
      - !Ref InstanceRootRole  
  
  TestWebsiteServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable access to server
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourceSecurityGroupId: !Ref TestWebsiteALBSecurityGroup          
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: "TestWebsite-InstanceSecurityGroup"
        - Key: Team
          Value: DevOps
        - Key: Product
          Value: "TestWebsite POC"
        - Key: Component
          Value: "WebServer"
  
  TestWebsiteALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "TestWebsite ALB Security Group"      
      VpcId: !Ref VpcId
      SecurityGroupIngress:
          - IpProtocol: tcp
            FromPort: 80
            ToPort: 80
            CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: "TestWebsite-ALBSecurityGroup"
        - Key: Team
          Value: DevOps
        - Key: Product
          Value: "TestWebsite POC"
        - Key: Component
          Value: "TestWebsite"
  
  TestWebsiteLaunchConfiguration:
    Type: AWS::AutoScaling::LaunchConfiguration
    Properties:
      ImageId: !FindInMap 
        - AWSRegionArch2AMI
        - !Ref 'AWS::Region'
        - !FindInMap 
          - AWSInstanceType2Arch
          - !Ref InstanceType
          - Arch
      InstanceType: !Ref InstanceType 
      IamInstanceProfile: !Ref WebInstanceProfile     
      SecurityGroups:
        - !Ref TestWebsiteServerSecurityGroup
      KeyName: !Ref KeyPairName
      UserData: 
        Fn::Base64: !Sub |
          #!/bin/bash 
          yum update -y
          yum install httpd -y
          service httpd start
          chkconfig httpd on
          aws s3 cp s3://${WebsiteFilesS3Bucket} /var/www/html --recursive  
  
  TestWebsiteALB:
    Type: 'AWS::ElasticLoadBalancingV2::LoadBalancer'
    Properties:
      Name: "TestWebsite-ApplicationLB"
      Subnets: 
        - !Ref PublicSubnet1
        - !Ref PublicSubnet2
      SecurityGroups:
        - !Ref TestWebsiteALBSecurityGroup
      Tags:
        - Key: Name
          Value: "TestWebsite"
        - Key: Team
          Value: DevOps
        - Key: Product
          Value: "TestWebsite POC"
        - Key: Component
          Value: "TestWebsite"
  
  TestWebsiteALBTargetGroup:
      Type: 'AWS::ElasticLoadBalancingV2::TargetGroup'
      Properties:
        Name: 'TestWebsiteALBTargetGroup'
        Matcher:
            HttpCode: '200'
        HealthCheckIntervalSeconds: 20
        HealthCheckTimeoutSeconds: 10
        HealthyThresholdCount: 3
        UnhealthyThresholdCount: 5
        HealthCheckPort: '80'
        Port: '80'
        Protocol: HTTP
        TargetGroupAttributes:
            -   Key: stickiness.enabled
                Value: 'true'
            -   Key: stickiness.type
                Value: lb_cookie
        VpcId: !Ref VpcId
        Tags:
          - Key: Name
            Value: "TestWebsite-WebServer"
          - Key: Team
            Value: DevOps
          - Key: Product
            Value: "TestWebsite POC"
          - Key: Component
            Value: "TestWebsite"          
  
  TestWebsiteALBListener:
      Type: 'AWS::ElasticLoadBalancingV2::Listener'
      Properties:
        DefaultActions:
          - Type: forward
            TargetGroupArn: !Ref TestWebsiteALBTargetGroup
        LoadBalancerArn: !Ref TestWebsiteALB
        Port: '80'
        Protocol: HTTP
  
  TestWebsiteAutoScalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      TargetGroupARNs: 
        - !Ref TestWebsiteALBTargetGroup
      VPCZoneIdentifier: 
        - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2
      LaunchConfigurationName: !Ref TestWebsiteLaunchConfiguration
      MinSize: '1'
      MaxSize: '2'
      Tags:
        - Key: Name
          Value: "TestWebsite-WebServer"
          PropagateAtLaunch: True
        - Key: Team
          Value: DevOps
          PropagateAtLaunch: True
        - Key: Product
          Value: "TestWebsite POC"
          PropagateAtLaunch: True
        - Key: Component
          Value: "TestWebsite"
          PropagateAtLaunch: True
  
  TestWebsiteScaleUpPolicy:
    Type: AWS::AutoScaling::ScalingPolicy
    Properties:
      AdjustmentType: ChangeInCapacity
      AutoScalingGroupName: !Ref TestWebsiteAutoScalingGroup
      Cooldown: '1'
      ScalingAdjustment: '1'
  
  CPUUsageAlarmForTestWebsiteALB:
    Type: AWS::CloudWatch::Alarm
    Properties:
      EvaluationPeriods: '1'
      Statistic: Average
      Threshold: '50'
      AlarmDescription: Alarm if CPU too high or metric disappears indicating instance
        is down
      Period: '60'
      AlarmActions: 
        - !Ref TestWebsiteScaleUpPolicy
      Namespace: AWS/EC2
      Dimensions:
      - Name: AutoScalingGroupName
        Value:
          Ref: TestWebsiteAutoScalingGroup
      ComparisonOperator: GreaterThanThreshold
      MetricName: CPUUtilization
  
  HealthyHostCountAlarmForTestWebsiteALB:
      Type: 'AWS::CloudWatch::Alarm'
      Properties:
          AlarmName: "TestWebsite ALB Healthy Host Count"
          AlarmDescription:
              'Fn::Sub': 'The count of the number of healthy instances in TestWebsite ALB.'
          MetricName: HealthyHostCount
          Namespace: AWS/ApplicationELB
          Statistic: Average
          Period: '60'
          EvaluationPeriods: '2'
          Threshold: '1'
          Dimensions:
              -   Name: LoadBalancer
                  Value:
                      'Fn::GetAtt':
                          - TestWebsiteALB
                          - LoadBalancerFullName
              -   Name: TargetGroup
                  Value:
                      'Fn::GetAtt':
                          - TestWebsiteALBTargetGroup
                          - TargetGroupFullName
          ComparisonOperator: LessThanThreshold        

Outputs:
  TestWebsiteLBDNSName:
    Description: The DNSName of the TestWebsite load balancer
    Value: !GetAtt TestWebsiteALB.DNSName
  TestWebsiteAutoScalingGroupID:
    Description: ID of the TestWebsite AutoScalingGroup
    Value: !Ref TestWebsiteAutoScalingGroup
